@@ -3700,6 +3700,14 @@ of \kbd{x} and \kbd{y}
 \fun{GEN}{Flv_inv}{GEN x, ulong p} returns the vector of inverses of the elements
 of $x$ (as a \kbd{Flv}). Use Montgomery trick.
 
+\fun{void}{Flv_inv_inplace}{GEN x, ulong p} in place variant of \kbd{Flv\_inv}.
+
+\fun{GEN}{Flv_inv_pre}{GEN x, ulong p, ulong pi} as \kbd{Flv\_inv}
+assuming $pi$ is the pseudo inverse of $p$.
+
+\fun{void}{Flv_inv_inplace_pre}{GEN x, ulong p, ulong pi} in place variant of
+\kbd{Flv\_inv}.
+
 \fun{GEN}{zero_Flm}{long m, long n} creates a \kbd{Flm} with \kbd{m} x \kbd{n}
 components set to $0$. Note that the result allocates a
 \emph{single} column, so modifying an entry in one column modifies it in
