@@ -151,6 +151,7 @@ HIL52- [libpari] functions Fl_powers_pre, Fl_ellj_pre, Fl_elltwist
 BA 53- [libpari] functions Fl_powers, Fp_powers, Fl_ellj, Fl_ellj_to_a4a6
 BA 54- [libpari] functions FpXQX_div_by_X_x, FqX_div_by_X_x
 HIL55- [libpari] function Flx_oneroot_split
+BA 56- [libpari] functions Flv_inv_pre, Flv_inv_inplace, Flv_inv_inplace_pre
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
